Sat Jun 13 06:50:31 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/net/protocol.rb (Net::BufferedIO#rbuf_fill): TimeoutError is
	  obsolete, use Timeout::Error instead.  [ruby-core:23821]

Sat Jun 13 06:45:46 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_f_throw): fixed rdoc about execption.
	  [ruby-core:23824]

Fri Jun 12 14:56:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_expand_path): associate the input encoding when
	  copying an absolute path.  [ruby-dev:38594]

Fri Jun 12 02:41:21 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (str_replace_shared): shared target must be frozen.
	  [ruby-core:23727]

Thu Jun 11 21:05:09 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/cmath.rb (exp): omitted redundant function call.

Thu Jun 11 17:49:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (gfCheckVal): never used.

	* ext/bigdecimal/bigdecimal.c (VpInit): fixed format modifiers.

	* ext/bigdecimal/bigdecimal.c (VPrint): constified.

Thu Jun 11 15:27:17 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/prime.rb: documentation typo fixed.  a patch from okkez.
	  [ruby-dev:38586]

Wed Jun 10 18:15:17 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* dir.c (dir_s_getwd): directory path's encoding should be filesystem's
	  one.

	* lib/tmpdir.rb: ditto (but not finished yet.)

Wed Jun 10 06:28:15 2009  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems*: Upgrade to RubyGems 1.3.4 r2223.

Tue Jun  9 22:38:09 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/cmath.rb (log10): raised exception when the given number is
	  a negative real.

Tue Jun  9 15:13:14 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (dir_s_glob): fixed rdoc.  a patch from Joseph Pecoraro a
	  [ruby-core:23767].

	* dir.c (sys_warning): get rid of type-punning function cast.

	* dir.c (ruby_glob0): get rid of possible overflow.

Tue Jun  9 10:58:48 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
